<resources>
    <string name="app_name">Bookstore Inventory</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="add_a_book">Add a book</string>
    <string name="genre">Genre</string>
    <string name="price">Price (CA$)</string>
    <string name="quantity">Quantity</string>
    <string name="add_book">Add book</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
</resources>